# agentic-network-rca

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: log_analysis_agent.py  rca_workflow.py  remediation_agent.py  root_cause_agent.py
api/: server.py
data/: network_logs.json  sample_congestion.json
docker/: Dockerfile  docker-compose.yml  prometheus.yml
examples/: generate_sample_data.py  run_rca.py
monitoring/: metrics.py
notebooks/: demo.ipynb
pipelines/: telemetry_ingestion.py
rag/: retrieval.py  vector_store.py
src/agentic_network_rca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/network_rca/: __init__.py  cli.py  orchestrator.py
src/network_rca/agents/: __init__.py  anomaly_detection_agent.py  base_agent.py  data_ingestion_agent.py  rca_agent.py  report_agent.py
src/network_rca/models/: __init__.py  network_event.py
src/network_rca/utils/: __init__.py  metrics.py
tests/: __init__.py  test_agents.py  test_api.py  test_orchestrator.py  test_telemetry_ingestion.py
